2005-07-30  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b22)

	* Fixed setting of titles/summaries with G2.

2005-06-29  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b21)

	* Fixed downloading secured images for slideshow with G2.

2005-05-20  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b20)

	* Added ability to force the Gallery version to avoid problems with
	  auto-detection of G1 installations when the web server sends back
	  a bogus 404 message. Just add to your GalleryRemote.properties a line
	  with forceGalleryVersion.1=[1|2].

2005-05-19  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b19)

	* Added ability for the slideshow to loop.
	* Fixed GR barfing on non-integer sleep times for slideshow.
	* Added support for 0 sleep-time: immediate display of next
	  picture. Thanks to Andy Staudacher for the suggestions.

2005-05-19  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b18)

	* GR now sets user-agent and referer to fetch pictures, to comply
	  with elevated G2 security when using Block hotlinked items in the
	  URL Rewrite module.

2005-05-04  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b17)

	* GR and the GR applets are now able to run slideshows of G2
	  albums.
	* Slideshows can now start from a picture other than the first.
	  This is only available in the G2 applet right now.
	* Added debugging for thoses cases when some preferences are
	  missing.

2005-05-02  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b16)

	* Added support for slideshows of G2 albums, a prelude to
	  adding java-based fullscreen slideshows in G2.

2005-04-27  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b15)

	* Added support for an arbitrary number of cookies to be passed
	  to the applets, with the applet parameters gr_cookie/n/_name
	  and gr_cookie/n/_value where /n/ starts with 1 and are consecutive.

2005-04-25  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b14)

	* Added support for the applet to force the version of Gallery