@@ -1,3 +1,8 @@
+2005-07-30  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b23)
+
+	* Now using the new format for the remote controller URL in G2.
+	* G2 now supports album-properties.
+
 2005-07-30  Pierre-Luc Paour <gallery@paour.com> (1.4.2-b22)
 
 	* Fixed setting of titles/summaries with G2.
